--- a/src/pages/Main/Show/Factory/TownsDetails/index.css
+++ b/src/pages/Main/Show/Factory/TownsDetails/index.css
@@ -1,15 +1,14 @@
-.townsDetails{  
+.townsDetails {
   display: inline-block;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  margin-left: 60px;
-  width: 304px;
-
+  overflow: hidden;
+  width: 305px;
   margin-top: 22%;
-  margin-bottom: 14%;
+  margin-bottom: 12%;
+  margin-left: 60px;
   border: 1px solid red;
 }
 
-.townsDetails-2{
-  padding: 0 10px;
+.townsDetails-2 {
+  width: 285px;
+  padding-left: 12px;
 }
