--- a/src/pages/Main/Selection/Factory/Top/index.css
+++ b/src/pages/Main/Selection/Factory/Top/index.css
@@ -3,19 +3,19 @@
   font-family: 楷体;
   font-weight: normal;
   color: #2d1692;
-  font-size:30px;
+  font-size: 30px;
   margin-top: 30px;
   margin-left: 10px;
 }
 
-.townsTop{
-  z-index: 2;
+.townsTop {
   position: fixed;
+  z-index: 2;
   background-color: #fff;
-
   width: 373px;
-  margin-top: -8px;
-  margin-left: -8px;
-  
-  border: solid 1px red; 
+  height: 85px;
+  top: 0px;
+  left: 0px;
+
+  border: solid 1px red;
 }
