--- a/src/pages/Main/Selection/Factory/TownsDetails/index.css
+++ b/src/pages/Main/Selection/Factory/TownsDetails/index.css
@@ -1,10 +1,12 @@
 .townsDetails {
-  display: inline-block;
+  position: absolute;
   overflow: hidden;
   width: 305px;
-  margin-top: 22%;
+  margin-top: 20%;
   margin-bottom: 12%;
   margin-left: 60px;
+
+  padding-bottom: 15%;
   border: 1px solid red;
 }
 
