--- a/src/pages/Main/Selection/Home/Top/index.css
+++ b/src/pages/Main/Selection/Home/Top/index.css
@@ -1,16 +1,14 @@
 .topDiv{
-  display: block;
   position: fixed;
-  z-index: 16;
+  z-index: 2;
   width: 373px;
   height: 80px;
+  top: 0px;
+  left: 0px;
 
-  margin-top: -8px;
-  margin-left: -8px;
   background-color: #ffffff;
   border: solid 1px red;
 }
 .adm-tabs-header{
   padding-top: 10%;
-  
 }
