--- a/src/pages/Main/index.css
+++ b/src/pages/Main/index.css
@@ -1,13 +1,11 @@
 .tabBar {
-  display: block;
   position: fixed;
-  
+  left: 0px;
+  bottom: 0px;
   /*表优先级，数值越大优先级越高*/
   z-index: 2;
-  bottom: 0px;
   width: 373px;
   height: 60px;
-  margin-left: -8px;
 
   border: 1px solid red;
   background-color: #ffffff;
