--- a/src/Componets/Exhibit/Factory/ListAndDetils/TownsDetails/index.css
+++ b/src/Componets/Exhibit/Factory/ListAndDetils/TownsDetails/index.css
@@ -1,15 +1,22 @@
 .townsDetails {
   display: flex;
-  width: 307px;
-  height: 500px;
-  margin-top: 20%;
+  width: 306px;
+  height: 100%;
+  background-color: gray;
+}
+.townsDetails-2{
+  flex: 1;
+  overflow: auto;
+  padding: 6px 0 6px 0;
+  border: solid 1px;
 }
 
-.townsDetails-2 {
-  /* margin-bottom: 20%; */
-  border: solid 1px red;
+.cardDiv{
+  width: 270px;
+  height: 60px;
 }
 
-.townsDetails-2 h3 {
-  padding: 0 16px 0 15px;
-}
+
+/* .townsDetails-2 h3 {
+  padding: 10px 15px 10px 15px;
+} */
