--- a/src/Componets/Exhibit/Home/index.css
+++ b/src/Componets/Exhibit/Home/index.css
@@ -1,6 +1,11 @@
 .list{
-  flex: 1;
+  height: 100%;
   display: flex;
   flex-direction: column;
   overflow: hidden;
+}
+.cardDetails{
+  height: 100%;
+  display: flex;
+  border: solid 1px;
 }
