--- a/src/Componets/Exhibit/Message/index.css
+++ b/src/Componets/Exhibit/Message/index.css
@@ -1,6 +1,10 @@
-.factory{
+.message{
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  border: solid 1px;
+}
+
+.message-2{
+  flex: 1;
 }
