--- a/src/Componets/Exhibit/Factory/TownsAndFactory/FactoryList/index.css
+++ b/src/Componets/Exhibit/Factory/TownsAndFactory/FactoryList/index.css
@@ -1,10 +1,10 @@
-.townsDetails {
+.factoryDetails {
   display: flex;
   width: 306px;
   height: 100%;
   background-color: gray;
 }
-.townsDetails-2{
+.factoryDetails-2{
   flex: 1;
   overflow: auto;
   padding: 6px 0 6px 0;
